# nebula-manager

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vault-fakedata.json  vite.config.ts
.github/workflows/: release.yml
overlay/: index.html  index.tsx
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/vault/: crypto.rs  entry.rs  mod.rs  vault.rs
src/components/: Alert.tsx  AlertItem.tsx  AlertManager.tsx  AlertProgress.tsx  App.tsx  ApplicationHeader.tsx  CharacterColumn.tsx  CircularProgress.tsx  CloseButton.tsx  ConfirmModalManager.tsx  ConfirmModaltem.tsx  ConfirmPopupItem.tsx  ConfirmPopupManager.tsx  EntryForm.tsx  EntryPasswordField.tsx  Favicon.tsx  FavoritePasswords.tsx  FilteredEntryList.tsx  FloatingIcon.tsx  Footer.tsx  Form.tsx  FormGroup.tsx  HoverableIcon.tsx  Icons.tsx  Input.tsx  ModalItem.tsx  ModalManager.tsx  NumberTicker.tsx  NumberTickerColumn.tsx  Overlay.tsx  OverlaySearchBar.tsx  PasswordStrengthMeter.tsx  ReadableTime.tsx  RecentlyUsedPasswords.tsx  Router.tsx  SearchBar.tsx  SecurityOverview.tsx  SetupCreateStep.tsx  SetupDoneStep.tsx  SetupImportStep.tsx  (+12 more)
src/contexts/: alert.tsx  confirmModal.tsx  confirmPopup.tsx  error.tsx  form.tsx  modal.tsx  popup.tsx  router.tsx  toast.tsx  vault.tsx  vaultState.tsx
src/hooks/: usePassword.ts  useReadableTime.tsx  useTauriFocusFix.tsx  useVault.ts  useVaultStatistics.tsx
src/pages/: App.tsx  AppWrapper.tsx  Export.tsx  FatalError.tsx  Root.tsx  (+4 more)
(+40 files in other folders)
